Fixed scaling issues on Safari

--- a/scss/main.css
+++ b/scss/main.css
@@ -1312,6 +1312,12 @@ nav.red::before {
   padding-bottom: 25px;
 }
 
+.serviceIcon {
+  height: 120px;
+  width: 120px;
+  margin: 4px;
+}
+
 #lifeARSplashContent {
   background-image: url(../Resources/pages/lifear/lifear_splash_background.svg);
   background-repeat: no-repeat;
@@ -1332,6 +1338,8 @@ nav.red::before {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .title {
@@ -1439,8 +1447,8 @@ nav.red::before {
   background-image: url(../Resources/pages/lifear/lifear_activism_background2.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  margin-left: -5.5%;
-  margin-right: -5.5%;
+  margin-left: -6%;
+  margin-right: -6%;
   height: calc(100vw);
   margin-bottom: -10%;
 }
