--- a/scss/pages/_lifear-info-pages.scss
+++ b/scss/pages/_lifear-info-pages.scss
@@ -2,8 +2,8 @@
     background-image: url(../Resources/pages/lifear/lifear_activism_background2.svg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    margin-left: -5.5%;
-    margin-right: -5.5%;
+    margin-left: -6%;
+    margin-right: -6%;
     height: calc(100vw);
     margin-bottom: -10%;
 
