--- a/scss/pages/_lifear-splash.scss
+++ b/scss/pages/_lifear-splash.scss
@@ -19,6 +19,8 @@
 
     justify-items: center;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 .title{
     color:$blue;
