--- a/scss/pages/_portfolio.scss
+++ b/scss/pages/_portfolio.scss
@@ -44,3 +44,9 @@
   padding-top: 5px;
   padding-bottom: 25px;
 }
+
+.serviceIcon{
+    height: 120px;
+    width: 120px;
+    margin: 4px;
+}
